yiltc-v0.2-backup/testsuite/negative/enum_missing_payload.yilt
// Negative test: missing required payload on a payload variant

enum Result
    Ok(int)
    Err(str)

pub fn main()
    let r = Result.Ok
    print(r)
